<resources>
    <string name="app_name">Food_Order_Application</string>
    <string name="title_activity__bottom_navigation">activity_BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_nav">activity_bottomNav</string>
    <string name="banner_1">Discount</string>
    <string name="banner_2">Best Seller</string>
    <string name="banner_3">Recommend</string>
    <string name="todo">That is conten</string>
    <string name="title_activity_maps">Map</string>
</resources>
