<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ExtraText,MissingConstraints">

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="HOME"
                android:textColor="@color/colorWhite"
                android:textSize="34sp"
                android:textStyle="bold" />

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:background="@color/colorWhite"
                android:layout_below="@+id/title"
                android:iconifiedByDefault="false"
                android:queryHint="What would you like to eat?">
            </SearchView>

            <ViewFlipper
                android:id="@+id/v_flipper"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/search"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16sp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textview"
                android:text="@string/banner_1"
                android:textSize="19sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_flipper"/>

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/textview"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/curry"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo"/>

            <TextView
                android:id="@+id/textview1"
                android:text="@string/banner_2"
                android:textSize="19sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageview"/>

            <ImageView
                android:id="@+id/imageview2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/textview1"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/soup"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo"/>

            <TextView
                android:id="@+id/textview2"
                android:text="@string/banner_3"
                android:textSize="19sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageview2"/>

            <ImageView
                android:id="@+id/imageview3"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/textview2"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/rice"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo"/>

            <TextView
                android:id="@+id/textview3"
                android:text="@string/app_name"
                android:textSize="19sp"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageview3"
                android:background="@color/colorPrimary"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>